# CustomLogger

./: CMakeLists.txt  README.md  main.cpp
include/: Logging.h  process1.h  process2.h
src/: Logging.cpp  process1.cpp  process2.cpp
